--- a/credit_risk_ensemble.ipynb
+++ b/credit_risk_ensemble.ipynb
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -290,14 +290,14 @@
        "[5 rows x 86 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Load the data\n",
-    "file_path = Path('LoanStats_2019Q1.csv.zip')\n",
+    "file_path = Path('LoanStats_2019Q1.csv')\n",
     "df = pd.read_csv(file_path, skiprows=1)[:-2]\n",
     "df = df.loc[:, columns].copy()\n",
     "\n",
@@ -337,20 +337,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Create our features\n",
-    "X = # YOUR CODE HERE\n",
+    "X = pd.get_dummies(df, columns=[\"home_ownership\",\"verification_status\", \"issue_d\", \"pymnt_plan\",\"initial_list_status\",\"next_pymnt_d\", \"application_type\",\"hardship_flag\", \"debt_settlement_flag\"])\n",
+    "X = X.drop([\"loan_status\"], axis=1)\n",
     "\n",
     "# Create our target\n",
-    "y = # YOUR CODE HERE"
+    "y = df[\"loan_status\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -659,7 +660,7 @@
        "[8 rows x 95 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -670,7 +671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -681,24 +682,36 @@
        "Name: loan_status, dtype: int64"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Check the balance of our target values\n",
-    "y['loan_status'].value_counts()"
+    "y.value_counts()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Counter({'low_risk': 51339, 'high_risk': 273})"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from sklearn.model_selection import train_test_split\n",
-    "# YOUR CODE HERE"
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, random_state=28)\n",
+    "Counter(y_train)"
    ]
   },
   {
@@ -727,23 +740,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "BalancedRandomForestClassifier(random_state=1)"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Resample the training data with the BalancedRandomForestClassifier\n",
-    "# YOUR CODE HERE"
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "rf_model = RandomForestClassifier(n_estimators=100, random_state=1)\n",
+    "rf_model = rf_model.fit(X_train, y_train)"
    ]
   },
   {
@@ -1044,7 +1048,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.7.10"
   }
  },
  "nbformat": 4,
