Error fix. Upload with Screenshots folder

--- a/credit_risk_ensemble.ipynb
+++ b/credit_risk_ensemble.ipynb
@@ -1041,7 +1041,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Easy Ensemble AdaBoost Classifier"
+    "### Easy Ensemble AdaBoost Classifier"
    ]
   },
   {
@@ -1156,14 +1156,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Easy Ensemble Analysis\n",
+      "Easy Ensemble ADABoost Classifier\n",
       "Confusion Matrix\n"
      ]
     },
@@ -1237,7 +1237,7 @@
     "from imblearn.metrics import classification_report_imbalanced\n",
     "\n",
     "# Displaying results\n",
-    "print(\"Easy Ensemble Analysis\")\n",
+    "print(\"Easy Ensemble ADABoost Classifier\")\n",
     "print(\"Confusion Matrix\")\n",
     "display(cm_df)\n",
     "print(f\"Accuracy Score : {acc_score}\")\n",
