--- a/credit_risk_resampling.ipynb
+++ b/credit_risk_resampling.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -296,7 +296,7 @@
        "[5 rows x 86 columns]"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -343,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -555,7 +555,7 @@
        "[5 rows x 95 columns]"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -572,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -881,7 +881,7 @@
        "[8 rows x 95 columns]"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -892,7 +892,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -903,7 +903,7 @@
        "Name: loan_status, dtype: int64"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -915,7 +915,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -925,7 +925,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -971,7 +971,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -980,7 +980,7 @@
        "Counter({'low_risk': 51366, 'high_risk': 51366})"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -995,7 +995,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1004,7 +1004,7 @@
        "LogisticRegression(random_state=1)"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1018,7 +1018,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1039,7 +1039,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1088,7 +1088,7 @@
        "Actual Low Risk                  7419                9685"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1108,7 +1108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 18,
    "metadata": {
     "scrolled": true
    },
@@ -1117,7 +1117,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Oversampling Analysis\n",
+      "Oversampling Method\n",
       "Confusion Matrix\n"
      ]
     },
@@ -1191,7 +1191,7 @@
     "from imblearn.metrics import classification_report_imbalanced\n",
     "\n",
     "# Displaying results\n",
-    "print(\"Oversampling Analysis\")\n",
+    "print(\"Oversampling Method\")\n",
     "print(\"Confusion Matrix\")\n",
     "display(cm_df)\n",
     "print(f\"Accuracy Score : {acc_score}\")\n",
@@ -1208,7 +1208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1217,7 +1217,7 @@
        "Counter({'low_risk': 51366, 'high_risk': 51366})"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1232,7 +1232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1241,7 +1241,7 @@
        "LogisticRegression(random_state=1)"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1254,7 +1254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1263,7 +1263,7 @@
        "0.6584476794265021"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1271,12 +1271,13 @@
    "source": [
     "# Calculated the balanced accuracy score\n",
     "y_pred = model.predict(X_test)\n",
-    "balanced_accuracy_score(y_test, y_pred)"
+    "acc_score = balanced_accuracy_score(y_test, y_pred)\n",
+    "acc_score"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1307,13 +1308,13 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>Actual high_risk</th>\n",
-       "      <td>64</td>\n",
-       "      <td>37</td>\n",
+       "      <td>74</td>\n",
+       "      <td>27</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Actual low_risk</th>\n",
-       "      <td>5418</td>\n",
-       "      <td>11686</td>\n",
+       "      <td>7419</td>\n",
+       "      <td>9685</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1321,11 +1322,11 @@
       ],
       "text/plain": [
        "                  Predicted high_risk  Predicted low_risk\n",
-       "Actual high_risk                   64                  37\n",
-       "Actual low_risk                  5418               11686"
+       "Actual high_risk                   74                  27\n",
+       "Actual low_risk                  7419                9685"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1333,17 +1334,17 @@
    "source": [
     "# Display the confusion matrix\n",
     "# Calculating the confusion matrix\n",
-    "cm = confusion_matrix(y_test, y_pred)\n",
+    "scm = confusion_matrix(y_test, y_pred)\n",
     "\n",
     "# Create a DataFrame from the confusion matrix.\n",
-    "cm_df = pd.DataFrame(\n",
+    "scm_df = pd.DataFrame(\n",
     "    cm, index=[\"Actual high_risk\", \"Actual low_risk\"], columns=[\"Predicted high_risk\", \"Predicted low_risk\"])\n",
-    "cm_df"
+    "scm_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 23,
    "metadata": {
     "scrolled": false
    },
@@ -1369,6 +1370,95 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SMOTE Method\n",
+      "Confusion Matrix\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Predicted high_risk</th>\n",
+       "      <th>Predicted low_risk</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Actual high_risk</th>\n",
+       "      <td>74</td>\n",
+       "      <td>27</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Actual low_risk</th>\n",
+       "      <td>7419</td>\n",
+       "      <td>9685</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                  Predicted high_risk  Predicted low_risk\n",
+       "Actual high_risk                   74                  27\n",
+       "Actual low_risk                  7419                9685"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy Score : 0.6584476794265021\n",
+      "Classification Report\n",
+      "                   pre       rec       spe        f1       geo       iba       sup\n",
+      "\n",
+      "  high_risk       0.01      0.63      0.68      0.02      0.66      0.43       101\n",
+      "   low_risk       1.00      0.68      0.63      0.81      0.66      0.44     17104\n",
+      "\n",
+      "avg / total       0.99      0.68      0.63      0.81      0.66      0.44     17205\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Print the imbalanced classification report\n",
+    "# Displaying results\n",
+    "print(\"SMOTE Method\")\n",
+    "print(\"Confusion Matrix\")\n",
+    "display(scm_df)\n",
+    "print(f\"Accuracy Score : {acc_score}\")\n",
+    "print(\"Classification Report\")\n",
+    "print(classification_report_imbalanced(y_test, y_pred))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1387,7 +1477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1396,7 +1486,7 @@
        "Counter({'high_risk': 246, 'low_risk': 246})"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1404,7 +1494,6 @@
    "source": [
     "# Resample the data using the ClusterCentroids resampler\n",
     "# Warning: This is a large dataset, and this step may take some time to complete\n",
-    "from collections import Counter\n",
     "from imblearn.under_sampling import ClusterCentroids\n",
     "cc = ClusterCentroids(random_state=1)\n",
     "X_resampled, y_resampled = cc.fit_resample(X_train, y_train)\n",
@@ -1413,7 +1502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1422,7 +1511,7 @@
        "LogisticRegression(random_state=1)"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1435,7 +1524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1444,20 +1533,21 @@
        "0.5442369453268994"
       ]
      },
-     "execution_count": 94,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Calculated the balanced accuracy score\n",
-    "#y_pred = model.predict(X_test)\n",
-    "balanced_accuracy_score(y_test, y_pred)"
+    "y_pred = model.predict(X_test)\n",
+    "uacc_score = balanced_accuracy_score(y_test, y_pred)\n",
+    "uacc_score"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -1488,13 +1578,13 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>Actual High Risk</th>\n",
-       "      <td>70</td>\n",
-       "      <td>31</td>\n",
+       "      <td>74</td>\n",
+       "      <td>27</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Actual Low Risk</th>\n",
-       "      <td>10341</td>\n",
-       "      <td>6763</td>\n",
+       "      <td>7419</td>\n",
+       "      <td>9685</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1502,36 +1592,36 @@
       ],
       "text/plain": [
        "                  Predicted High Risk  Predicted Low Risk\n",
-       "Actual High Risk                   70                  31\n",
-       "Actual Low Risk                 10341                6763"
+       "Actual High Risk                   74                  27\n",
+       "Actual Low Risk                  7419                9685"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Display the confusion matrix\n",
-    "cm = confusion_matrix(y_test, y_pred)\n",
+    "ucm = confusion_matrix(y_test, y_pred)\n",
     "\n",
     "# Create df for confusion matrix\n",
-    "cm_df = pd.DataFrame(\n",
+    "ucm_df = pd.DataFrame(\n",
     "    cm, index=[\"Actual High Risk\", \"Actual Low Risk\"], columns=[\"Predicted High Risk\", \"Predicted Low Risk\"])\n",
     "\n",
-    "cm_df"
+    "ucm_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Undersampling Analysis\n",
+      "Undersampling Method\n",
       "Confusion Matrix\n"
      ]
     },
@@ -1563,13 +1653,13 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>Actual High Risk</th>\n",
-       "      <td>70</td>\n",
-       "      <td>31</td>\n",
+       "      <td>74</td>\n",
+       "      <td>27</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Actual Low Risk</th>\n",
-       "      <td>10341</td>\n",
-       "      <td>6763</td>\n",
+       "      <td>7419</td>\n",
+       "      <td>9685</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1577,8 +1667,8 @@
       ],
       "text/plain": [
        "                  Predicted High Risk  Predicted Low Risk\n",
-       "Actual High Risk                   70                  31\n",
-       "Actual Low Risk                 10341                6763"
+       "Actual High Risk                   74                  27\n",
+       "Actual Low Risk                  7419                9685"
       ]
      },
      "metadata": {},
@@ -1605,10 +1695,10 @@
     "from imblearn.metrics import classification_report_imbalanced\n",
     "\n",
     "# Displaying results\n",
-    "print(\"Undersampling Analysis\")\n",
+    "print(\"Undersampling Method\")\n",
     "print(\"Confusion Matrix\")\n",
-    "display(cm_df)\n",
-    "print(f\"Accuracy Score : {acc_score}\")\n",
+    "display(ucm_df)\n",
+    "print(f\"Accuracy Score : {uacc_score}\")\n",
     "print(\"Classification Report\")\n",
     "print(classification_report_imbalanced(y_test, y_pred))"
    ]
@@ -1632,7 +1722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -1641,14 +1731,14 @@
        "Counter({'high_risk': 68458, 'low_risk': 62022})"
       ]
      },
-     "execution_count": 97,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Resample the training data with SMOTEENN\n",
-    "# Warning: This is a large dataset, and this step may take some time to complete\n",
+    "# Warning: This is alarge dataset, and this step may take some time to complete\n",
     "from imblearn.combine import SMOTEENN\n",
     "\n",
     "smote_enn = SMOTEENN(random_state=1)\n",
@@ -1658,7 +1748,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -1667,7 +1757,7 @@
        "LogisticRegression(random_state=1)"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1681,7 +1771,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1692,7 +1782,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -1741,7 +1831,7 @@
        "Actual Low Risk                  7829                9275"
       ]
      },
-     "execution_count": 100,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1759,14 +1849,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "SMOTEENN Analysis\n",
+      "SMOTEENN Method\n",
       "Confusion Matrix\n"
      ]
     },
@@ -1840,7 +1930,7 @@
     "from imblearn.metrics import classification_report_imbalanced\n",
     "\n",
     "# Displaying results\n",
-    "print(\"SMOTEENN Analysis\")\n",
+    "print(\"SMOTEENN Method\")\n",
     "print(\"Confusion Matrix\")\n",
     "display(cm_df)\n",
     "print(f\"Accuracy Score : {acc_score}\")\n",
